# yolov3_pytorch_ros

./: CMakeLists.txt  README.md  package.xml
cfg/: yolo-lisa.cfg
classes/: lisa.data  lisa.names
launch/: detector.launch
msg/: BoundingBox.msg  TrafficObject.msg
src/: detector.py
src/utils/: utils.py
