<?xml version="1.0"?>
<package format="2">
  <name>yolov3_pytorch_ros</name>
  <version>0.1.0</version>
  <description>Road sign recognition ROS package. CSCE 482 Capstone.</description>

  <maintainer email="chasemcd1745@tamu.edu">Chase McDermott</maintainer>
  <!-- <maintainer>Joey Whitmore</maintainer>
  <maintainer>Wilson Kahlich</maintainer>
  <maintainer>Travis Teeter</maintainer> -->

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
